# rpaa-banking

./: .gitignore  README.md  case_info.md  pyproject.toml  rpaa-banking-project-client.pptx  train.py  utils.py
baseline_results_one_feat_by_RFE/: target_corr.csv
baseline_results_one_feat_by_RFE/.hydra/: config.yaml  hydra.yaml
config/: config.yaml
config/model/: baseline.yaml  xgboost.yaml
data/: customer_data.csv  loan_data.csv  loan_deliquencies.csv
jnotebooks/: Dataset_Generation.ipynb  EDA_and_Feature_Engineering.ipynb  Modelling.ipynb
processed_data/: customer_data.csv  customer_financials.csv  loan_data.csv  loan_deliquencies.csv
xgboost_hyperparam_results/.hydra/: config.yaml  hydra.yaml
xgboost_hyperparam_results/xgboost_cv_results/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
xgboost_nohyperparam_results/.hydra/: config.yaml  hydra.yaml
