[tool.poetry]
name = "rpaa-recruiting-case-furkan"
version = "0.1.0"
description = ""
authors = ["Furkan Gul <frkangul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "2.2.0"
matplotlib = "3.8.2"
seaborn = "0.13.1"
missingno = "0.5.2"
scikit-learn = "1.4.0"
optuna = "3.5.0"
xgboost = "2.0.3"
graphviz = "0.20.1"
shap = "0.44.0"
hydra-core = "1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
